# toy_passthrough

./: Dockerfile  Makefile  endpoints.ipynb  pyproject.toml
src/: app.py
